Closed Bug 435885 Opened 18 years ago Closed 17 years ago

EntryCompletion popup not working properly

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: tonikitoo, Assigned: tonikitoo)

References

Details

(Keywords: mobile)

Attachments

(1 file, 2 obsolete files)

PRECONDITIONS: User have been use browser earlier (History is available). STEPS LEADING TO PROBLEM: 1. Open fennec. 2. Start writing url to the field => History list opened. 3. Continue write url EXPECTED OUTCOME: Url writing continues without any "breaks". ACTUAL OUTCOME: Every time when history list open, user needs to tap twice to character, which he want to add. FREQUENCY OF OCCURRENCE: Always. Reproducible with Fennec on Linux PC and Linux Arm (n800 and n810 devices)
I can't replicate this using the n810 keyboard. The action works as I would expect (no need to double enter a letter).
(In reply to comment #1) > I can't replicate this using the n810 keyboard. The action works as I would > expect (no need to double enter a letter). > mfinkle: you are right. Bug is reproducible only w/out physical keyboard, e.g. n800 with patches from bug 426344. maybe we have a dependency here (?)
is this still an issue with m5?
Blocks: 406837
Assignee: nobody → tonikitoo
Flags: blocking-fennec1.0?
Attached patch patch v1 (obsolete) — Splinter Review
patch avoids entrycompletion to steal focus. ps: this issue has been fixed in gtk side on maemo already by ifdef'ing some similar peace of code.
Attachment #336254 - Flags: review?(roc)
I don't want to sprinkle #ifdef NS_OSSO through our code. I don't even know what OSSO is. Perhaps it would be better to have a global variable or a function so that this can be switched dynamically? With a better name, like gEnableVirtualKeyboard or something.
Roc, according to wiki.maemo.org "OSSO means "Open Source Software Operations". It's a department inside Nokia." In our code, NS_OSSO has been used to designate the flavor of linux running on the n800/n810. Perhaps NS_MAEMO would be more appropriate... Antonio, is this a problem specific to hildon? If so, we should be using NS_HILDON.
I honestly don't think we should use NS_MAEMO or NS_HILDON either, although we already have used it. I'd prefer to use names that have some actual technical meaning, i.e., something describing the thing that's different about Maemo/Hildon that means we have to behave differently there.
OK, if "Hildon" is the official name for a variant of the GTK2 platform, then I suggest we use MOZ_WIDGET_GTK2_HILDON.
Depends on: 453384
i'm not very concerned about the ifdefs, however, I'm concerned about us changing basic functionality based on one without a really big comment above explaining why it is OK. Should it only be this way when only when the virtual keyboard is up? Why is it OK to always be that way? What is special about Maemo/Hildon?
Depends on: 453867
Attached patch patch v2 (obsolete) — Splinter Review
patch on top of already r'ed+ patch in bug 406837. added 'gIMEVirtualKeyboardOpened' to avoid EnsureGrabs() to get call only when vkb is up.
Attachment #336254 - Attachment is obsolete: true
Attachment #337796 - Flags: review?(roc)
Attachment #336254 - Flags: review?(roc)
Component: General → Widget
Flags: blocking-fennec1.0?
Product: Fennec → Core
QA Contact: general → general
gtk maemo guys did something similar for their gtk+-2.10 changes see http://mxr.maemo.org/diablo/source/gtk+2.0-2.10.12/gtk/gtkentrycompletion.c#1592
same patch but changed NS_HILDON by NS_PLATFORM_HILDON ... see bug 453867.
Attachment #337796 - Attachment is obsolete: true
Keywords: checkin-needed
Attachment #338155 - Attachment description: v3 - ready to go. → v3 - ready to go. [Checkin: Comment 13]
Status: NEW → RESOLVED
Closed: 17 years ago
Component: Widget → Widget: Gtk
Keywords: checkin-needed
QA Contact: general → gtk
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
Blocks: 439053
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: