Bug 435885 - EntryCompletion popup not working properly; v3; r+sr=roc